whole page background color change to avoid flicker bug fix

--- a/ui/client/stylesheets/visualization.styl
+++ b/ui/client/stylesheets/visualization.styl
@@ -5,6 +5,7 @@
   position: relative
   overflow-x: hidden
   height 100%
+  background-color #b3b3b3
 
 .tagsBlockVis
   tagsBlockMixin()
